# hgt

./: .gitignore  README.md  gt.cabal  gt.ws.lkshs  gt.ws.lkshw  ws-space.lkshw  ws-tiles.lkshw  ws-universe.lkshw
core/: core.cabal  gt-core.cabal
core-tiles/: core-tiles.cabal
core-tiles/src/Tiles/: Generation.hs  Renderer.hs
core-universe/: core-universe.cabal
core-universe/src/: Universe.hs
core-universe/src/Measures/: IntType.hs  SI.hs  Unit.hs
core-universe/src/Measures/Unit/: Internal.hs
core-universe/src/Universe/: Camera.hs  Objects.hs  PhysicalLaws.hs  Scope.hs
core-universe/src/Universe/Objects/: Chemistry.hs
core/src/: Measures.hs  Measures2.hs  OpenGLRenderer.hs  Universe.hs  Utils.hs
core/src/Measures/: IntType.hs  Unit.hs
core/src/Measures/Unit/: Internal.hs
core/src/Universe/: Objects.hs  Phys.hs  PhysicalLaws.hs  Scope.hs
core/src/Universe/Objects/: Celestial.hs  Shape.hs  Stellar.hs
core/src/Utils/: GL.hs
gt-core/: gt-core.cabal
gt-core/src/: Main.hs  OpenGLRenderer.hs  TestTiles.hs  TestTilesRenderer.hs  Tile.hs  TileRenderer.hs  Tiles.hs
space-independent/: space-independent.cabal  todo.md
space-independent/src/: Main.hs  U.hs  Vis.hs
space-independent/src/U/: Defs.hs  Exec.hs  Objects.hs
space-independent/src/U/Exec/: Double.hs  Mutable.hs
space-independent/src/U/Exec/Mutable/: Impl.hs
space-independent/src/Vis/: Impl.hs
space-test/: space-test.cabal
space-test/src/: CelestialObjects.hs  U.hs
src/: GLUtils.hs  Main.hs  TilesGeneration.hs
src/Tiles/Test/: Main.hs  Renderer.hs  Tiles.hs
tiles-test/: gt-tiles-test.cabal  tiles-test.cabal
tiles-test/src/: Main.hs  TestRenderer.hs  TestTiles.hs
