name: core-tiles
version: 0.0.1
cabal-version: >= 1.6
build-type: Simple
license: MIT
license-file: ../licence
copyright: (c) Dmitry K
stability: dev
author: fehu
data-dir: ""

library
    build-depends: base -any,
                   containers -any,
                   OpenGL -any,
                   GLUT -any,
                   core == 0.0.1
    exposed-modules: Tiles
                        Tiles.Renderer
                        Tiles.Generation
    exposed: True
    buildable: True
    hs-source-dirs: src


