name: core-universe
version: 0.0.1
cabal-version: >= 1.6
build-type: Simple
license: MIT
license-file: ../licence
copyright: (c) Dmitry K
stability: dev
author: fehu
data-dir: ""

-- experimental

library
    build-depends: base -any,
                   containers -any,
                   OpenGL -any,
                   GLUT -any,
                   core == 0.0.1
    exposed-modules: Measures
                        Measures.Unit
                            Measures.Unit.Internal
                        Measures.IntType
                        Measures.SI
                     Universe
                        Universe.Phys
                        Universe.PhysicalLaws
                        Universe.Objects
                            Universe.Objects.Shape
                            Universe.Objects.Chemistry
                            Universe.Objects.Celestial
                        Universe.Camera
                        Universe.Scope
    exposed: True
    buildable: True
    hs-source-dirs: src


