name: gt-core
version: 0.0.1
cabal-version: >=1.6
build-type: Simple
license: MIT
license-file: ../licence
copyright: (c) Dmitry K
stability: dev
author: fehu
data-dir: ""

library
    build-depends: base -any,
                   containers -any,
                   OpenGL -any,
                   GLUT -any
    exposed-modules: OpenGLRenderer
                     Utils
                        Utils.GL
                     Tiles
                        Tiles.Renderer
                        Tiles.Generation
                     Measures
                        Measures.SI
                     Universe
                        Universe.PhysicalLaws
                        Universe.Objects
                            Universe.Objects.Shape
                            Universe.Objects.Chemistry
                            Universe.Objects.Stellar
    exposed: True
    buildable: True
    hs-source-dirs: src


