name: gt-core
version: 0.0.0
cabal-version: >=1.6
build-type: Simple
license: todo
license-file: ""
copyright: (c) Dmitry K
stability: dev
author: fehu
data-dir: ""

library
    build-depends: base -any,
                   containers -any,
                   transformers -any,
                   OpenGL -any,
                   GLUT -any
    exposed-modules: Tiles
                     OpenGLRenderer
                     TileRenderer
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: TestTiles TestTilesRenderer

executable gt-run
    build-depends: base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src


